# runbook

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: advanced.md  api.md  cheatsheet.md  checks.md  cli.md  concepts.md  data.md  declarative.md  embedding.md  examples.md  extending.md  index.md  integrations.md  philosophy.md  pipelines.md  quickstart.md  recipes.md  results.md  troubleshooting.md
examples/: basic_checks.py  build_runbook.py  orders_export.py
src/runbook/: __init__.py  actions.py  checks.py  cli.py  context.py  core.py  data.py  declarative.py  evaluation.py  events.py  exceptions.py  notifications.py  observability.py  registry.py  reporting.py  result.py  schema.py  templates.py  types.py
src/runbook/integrations/: __init__.py  airflow.py  files.py  http.py
tests/: test_cli.py  test_core.py  test_data.py  test_declarative.py  test_events.py  test_files_integration.py  test_http_integration.py  test_observability.py  test_registry.py  test_reporting.py  test_schema.py  test_templates.py
