[build-system]
requires = ["setuptools>=61,<76", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runbook"
version = "0.1.0"
description = "Small Airflow-oriented runbook DSL."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
    "jinja2>=3.0",
]

[project.optional-dependencies]
airflow = [
    "apache-airflow>=2.0",
]
aws = [
    "apache-airflow-providers-amazon",
]
azure = [
    "apache-airflow-providers-microsoft-azure",
]
sftp = [
    "paramiko>=2.0",
]
slack = [
    "slack-sdk>=3.0",
]
snowflake = [
    "apache-airflow-providers-snowflake",
]

[project.scripts]
runbook = "runbook.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["runbook*"]
