[build-system]
requires = ["setuptools>=61,<76", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runbook"
version = "0.1.0"
description = "Embeddable Python toolkit for operational checks and data pipeline guardrails."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "mkdocs>=1.5",
    "ruff>=0.5.0",
]
airflow = [
    "apache-airflow>=2.0",
]
aws = [
    "apache-airflow-providers-amazon",
]
azure = [
    "apache-airflow-providers-microsoft-azure",
]
sftp = [
    "paramiko>=2.0",
]
slack = [
    "slack-sdk>=3.0",
]
snowflake = [
    "apache-airflow-providers-snowflake",
]

[project.scripts]
runbook = "runbook.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["runbook*"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "UP006",
    "UP007",
    "UP037",
    "UP035",
    "UP045",
]
